# cloned-dnas-tracker

./: Cargo.toml  README.md  config.nix  zome.json
code/: .hcbuild  Cargo.toml
code/src/: cloned_dna.rs  lib.rs
example-dna/test/: index.js  package-lock.json
zome/: Cargo.toml
zome/cloned_dna_tracker.dna.workdir/: dna.json
zome/tests/src/: index.ts
zome/zomes/cloned_dna_tracker/: Cargo.toml
zome/zomes/cloned_dna_tracker/src/: cloned_dna.rs  lib.rs
